syntax = "proto3";

package crossplane;

import "crossplane/cloud-init.proto";
import "crossplane/resource.proto";
import "crossplane/types.proto";
import "validate/validate.proto";

option go_package = "github.com/stroppy-io/hatchet-workflow/internal/proto/crossplane";

message Hardware {
    uint32 cores = 1; // in cores
    uint32 memory = 2; // in GB
    uint32 disk = 3; // in GB
}

message Vm {
    message Template {
        Identifier identifier = 1 [(validate.rules).message.required = true];
        Hardware hardware = 2 [(validate.rules).message.required = true];
        string base_image_id = 5 [(validate.rules).string.min_len = 1];
        Ip internal_ip = 6 [(validate.rules).message.required = true];
        bool public_ip = 7;
        optional string external_ip = 8; // if public_ip == true
        CloudInit cloud_init = 9 [(validate.rules).message.required = true];
        map<string, string> labels = 4;
    }
    Template template = 1 [(validate.rules).message.required = true];
    Resource resource = 4 [(validate.rules).message.required = true];
}

message Subnet {
    message Template {
        Identifier identifier = 1 [(validate.rules).message.required = true];
        Cidr cidr = 2 [(validate.rules).message.required = true];
        repeated Ip ips = 3 [(validate.rules).repeated.min_items = 1];
        map<string, string> labels = 4;
    }
    Template template = 1 [(validate.rules).message.required = true];
    Resource resource = 4 [(validate.rules).message.required = true];
}

message Network {
    message Template {
        Identifier identifier = 1 [(validate.rules).message.required = true];
        string external_id = 2 [(validate.rules).string.min_len = 1];
        repeated Subnet.Template subnets = 3 [(validate.rules).repeated.min_items = 1];
        map<string, string> labels = 4;
    }
    Template template = 1 [(validate.rules).message.required = true];
    Resource resource = 3 [(validate.rules).message.required = true];
    repeated Subnet subnets = 4 [(validate.rules).repeated.min_items = 1];
}

message Deployment {
    message Template {
        Identifier identifier = 1 [(validate.rules).message.required = true];
        Network.Template network_template = 2 [(validate.rules).message.required = true];
        repeated Vm.Template vm_templates = 3 [(validate.rules).repeated.min_items = 1];
        map<string, string> labels = 7;
    }
    Template template = 1 [(validate.rules).message.required = true];
    Network network = 2 [(validate.rules).message.required = true];
    repeated Vm vms = 3 [(validate.rules).repeated.min_items = 1];
}


