syntax = "proto3";

package settings;

import "deployment/deployment.proto";
import "validate/validate.proto";

option go_package = "github.com/stroppy-io/hatchet-workflow/internal/proto/settings";


message YandexCloudSettings {
    /*
        This structure used for create network (and subnet after) in cloud
        You must specify it to use cloud deployment
    */
    message NetworkSettings {
        string name = 1 [(validate.rules).string.min_len = 1];
        string external_id = 2 [(validate.rules).string.min_len = 1];
    }
    /*
        This structure used for create VMs in cloud
        You must specify it to use cloud deployment
    */
    message VmSettings {
        string base_image_id = 6 [(validate.rules).string.min_len = 1];
        // If vm_users is empty, default user will be created without SSH keys
        repeated deployment.VmUser vm_users = 7;
        // Crate VMs with public IP always. May fail with quota of cloud resources
        bool enable_public_ips = 4;
        optional string platform_id = 8; // default is standard-v2
    }
    /*
        This structure used for create cloud provider resources
        You must specify it to use cloud deployment
    */
    message ProviderSettings {
        string token = 1 [(validate.rules).string.min_len = 1];
        string cloud_id = 10 [(validate.rules).string.min_len = 1];
        string folder_id = 2 [(validate.rules).string.min_len = 1];
        string zone = 3 [(validate.rules).string.min_len = 1];
    }
    ProviderSettings provider_settings = 4 [(validate.rules).message.required = true];
    NetworkSettings network_settings = 5 [(validate.rules).message.required = true];
    VmSettings vm_settings = 6 [(validate.rules).message.required = true];
}

message DockerSettings {
    string network_name = 1 [(validate.rules).string.min_len = 1];
    string edge_worker_image = 2 [(validate.rules).string.min_len = 1];
}

message Settings {
    deployment.Target preferred_target = 1 [(validate.rules).enum.defined_only = true];
    DockerSettings docker = 2 [(validate.rules).message.required = true];
    optional YandexCloudSettings yandex_cloud = 4;
}

message SelectedTarget {
    oneof target {
        settings.DockerSettings docker_settings = 3;
        settings.YandexCloudSettings yandex_cloud_settings = 4;
    }
}